--- a/rllib/tuned_examples/slateq/interest-evolution-10-candidates-recsim-env-slateq.yaml
+++ b/rllib/tuned_examples/slateq/interest-evolution-10-candidates-recsim-env-slateq.yaml
@@ -31,7 +31,7 @@ interest-evolution-recsim-env-slateq:
 
         replay_buffer_config:
             capacity: 100000
-            min_size: 10000
+        num_steps_sampled_before_learning_starts: 10000
 
         lr: 0.001
 
