--- a/release/rllib_tests/learning_tests/yaml_files/td3/td3-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/td3/td3-halfcheetahbulletenv-v0.yaml
@@ -10,6 +10,6 @@ td3-halfcheetahbulletenv-v0:
     config:
         num_gpus: 1
         replay_buffer_config:
-          min_size: 10000
+        num_steps_sampled_before_learning_starts: 10000
         exploration_config:
             random_timesteps: 10000
