--- a/rllib/tuned_examples/ddpg/halfcheetah-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/halfcheetah-ddpg.yaml
@@ -37,8 +37,8 @@ halfcheetah-ddpg:
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
           worker_side_prioritization: false
-          min_size: 500
 
+        num_steps_sampled_before_learning_starts: 500
         clip_rewards: False
 
         # === Optimization ===
