--- a/rllib/tuned_examples/ddpg/mountaincarcontinuous-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/mountaincarcontinuous-ddpg.yaml
@@ -38,7 +38,7 @@ mountaincarcontinuous-ddpg:
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
           worker_side_prioritization: false
-          min_size: 1000
+        num_steps_sampled_before_learning_starts: 1000
         clip_rewards: False
 
         # === Optimization ===
