--- a/rllib/tuned_examples/cql/halfcheetah-cql.yaml
+++ b/rllib/tuned_examples/cql/halfcheetah-cql.yaml
@@ -28,6 +28,9 @@ halfcheetah_cql:
         no_done_at_end: false
         n_step: 3
         rollout_fragment_length: 1
+        replay_buffer_config:
+          type: MultiAgentReplayBuffer
+        num_steps_sampled_before_learning_starts: 256
         train_batch_size: 256
         target_network_update_freq: 0
         min_train_timesteps_per_iteration: 1000
