--- a/rllib/tuned_examples/cql/hopper-bc.yaml
+++ b/rllib/tuned_examples/cql/hopper-bc.yaml
@@ -26,6 +26,9 @@ hopper_bc:
         no_done_at_end: false
         n_step: 1
         rollout_fragment_length: 1
+        replay_buffer_config:
+          type: MultiAgentReplayBuffer
+        num_steps_sampled_before_learning_starts: 10
         train_batch_size: 256
         target_network_update_freq: 0
         min_train_timesteps_per_iteration: 1000
