download from torch stable
Signed-off-by: Artur Niederfahrenhorst <artur@anyscale.com>

--- a/release/rllib_tests/app_config.yaml
+++ b/release/rllib_tests/app_config.yaml
@@ -16,7 +16,7 @@ post_build_cmds:
   # TODO(jungong): remove once nightly image gets upgraded.
   - pip install -U pybullet==3.2.0
   # TODO(artur): remove once torch is bumped everywhere
-  - pip install -U torch==1.12.0+cu102
+  - pip install -U torch==1.12.0+cu102 -f https://download.pytorch.org/whl/torch_stable.html
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
   # Clone the rl-experiments repo for offline-RL files.
   - git clone https://github.com/ray-project/rl-experiments.git
