--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -68,6 +68,7 @@ parts:
         title: Ray Train
         sections:
           - file: train/user_guide
+          - file: train/gbdt
           - file: train/examples
           - file: train/faq
           - file: train/architecture
