--- a/doc/BUILD
+++ b/doc/BUILD
@@ -129,7 +129,9 @@ py_test(
 py_test_run_all_subdirectory(
     size = "medium",
     include = ["source/ray-core/doc_code/*.py"],
-    exclude = ["source/ray-core/doc_code/runtime_env_example.py"],
+    exclude = ["source/ray-core/doc_code/runtime_env_example.py",
+               "source/ray-core/doc_code/cross_language.py",
+               "source/ray-core/doc_code/namespaces.py"],
     extra_srcs = [],
     tags = ["exclusive", "team:core"],
 )
