--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -17,7 +17,7 @@ parts:
         - file: ray-air/preprocessors
         - file: ray-air/checkpoints
         - file: ray-air/check-ingest
-        - file: ray-air/trainers
+        - file: ray-air/trainer
         - file: ray-air/config-scaling
         - file: ray-air/examples/analyze_tuning_results
         - file: ray-air/predictors
