--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -1234,7 +1234,7 @@
   driver_setup: ray-lightning/driver_setup.sh
   run:
     timeout: 1200
-    script: python ray-lightning/ray_lightning_user_test.py master
+    script: python ray-lightning/ray_lightning_user_test.py
     type: client
 
   alert: default
