--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -890,16 +890,10 @@ py_test(
     srcs = ["algorithms/dqn/tests/test_dqn.py"]
 )
 
-py_test(
-    name = "test_repro_dqn_gpu",
-    tags = ["team:rllib", "algorithms_dir", "gpu"],
-    size = "large",
-    srcs = ["algorithms/dqn/tests/test_repro_dqn.py"]
-)
-
+# DQN Reproducibility
 py_test(
     name = "test_repro_dqn",
-    tags = ["team:rllib", "algorithms_dir"],
+    tags = ["team:rllib", "algorithms_dir", "gpu"],
     size = "large",
     srcs = ["algorithms/dqn/tests/test_repro_dqn.py"]
 )
@@ -988,16 +982,10 @@ py_test(
     srcs = ["algorithms/ppo/tests/test_ppo.py"]
 )
 
-py_test(
-    name = "test_repro_ppo_gpu",
-    tags = ["team:rllib", "algorithms_dir", "gpu"],
-    size = "large",
-    srcs = ["algorithms/ppo/tests/test_repro_ppo.py"]
-)
-
+# PPO Reproducibility
 py_test(
     name = "test_repro_ppo",
-    tags = ["team:rllib", "algorithms_dir"],
+    tags = ["team:rllib", "algorithms_dir", "gpu"],
     size = "large",
     srcs = ["algorithms/ppo/tests/test_repro_ppo.py"]
 )
