add test_api to test serve functionality
Signed-off-by: Cindy Zhang <cindyzyx9@gmail.com>

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -333,6 +333,8 @@
     - ./ci/env/env_info.sh
     - bazel test --test_output=streamed --config=ci --test_env=RAY_DEFAULT=1 $(./ci/run/bazel_export_options)
       python/ray/dashboard/test_dashboard
+    - bazel test --test_output=streamed --config=ci --test_env=RAY_DEFAULT=1 $(./ci/run/bazel_export_options)
+      python/ray/serve/test_api
 
 - label: ":python: Release test package unit tests"
   conditions: ["ALWAYS"]
