--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,7 +8,8 @@
 # ==== Documentation ====
 
 # Authors responsible for copy-editing of the documentation.
-/doc/ @maxpumperla @pcmoritz @ericl @stephanie-wang @dmatrix @sriram-anyscale @richardliaw
+# NOTE: Add @ray-docs to all following docs subdirs.
+/doc/ @ray-docs
 
 # ==== Ray core ====
 
@@ -62,30 +63,30 @@
 
 # Ray data.
 /python/ray/data/ @ericl @scv119 @clarkzinzow @jjyao @jianoaix
-/doc/source/data/ @ericl @scv119 @clarkzinzow @jjyao @jianoaix @maxpumperla
+/doc/source/data/ @ericl @scv119 @clarkzinzow @jjyao @jianoaix @maxpumperla @ray-docs
 
 # Ray workflows.
 /python/ray/workflow/ @ericl @iycheng @stephanie-wang @suquark
-/doc/source/workflows/ @ericl @iycheng @stephanie-wang @suquark @maxpumperla
+/doc/source/workflows/ @ericl @iycheng @stephanie-wang @suquark @maxpumperla @ray-docs
 
 # RLlib.
 /rllib/ @sven1977 @gjoliver @avnishn @arturniederfahrenhorst @smorad @maxpumperla @kouroshhakha @krfricke
-/doc/source/rllib/ @sven1977 @gjoliver @avnishn @arturniederfahrenhorst @smorad @maxpumperla @kouroshhakha @krfricke
+/doc/source/rllib/ @sven1977 @gjoliver @avnishn @arturniederfahrenhorst @smorad @maxpumperla @kouroshhakha @krfricke @ray-docs
 
 # Cluster (docs)
-/doc/source/cluster/ @wuisawesome @DmitriGekhtman @maxpumperla @pcmoritz
+/doc/source/cluster/ @wuisawesome @DmitriGekhtman @maxpumperla @pcmoritz @ray-docs
 
 # Tune (docs)
-/doc/source/tune/ @richardliaw @krfricke @xwjiang2010 @amogkam @matthewdeng @Yard1 @maxpumperla
+/doc/source/tune/ @richardliaw @krfricke @xwjiang2010 @amogkam @matthewdeng @Yard1 @maxpumperla @ray-docs
 
 # Train (docs)
-/doc/source/train/ @richardliaw @krfricke @xwjiang2010 @amogkam @matthewdeng @Yard1 @maxpumperla
+/doc/source/train/ @richardliaw @krfricke @xwjiang2010 @amogkam @matthewdeng @Yard1 @maxpumperla @ray-docs
 
 # Serve (docs)
-/doc/source/serve/ @edoakes @simon-mo @jiaodong @shrekris-anyscale @sihanwang41
+/doc/source/serve/ @edoakes @simon-mo @jiaodong @shrekris-anyscale @sihanwang41 @ray-docs
 
 # AIR (docs)
-/doc/source/air/ @richardliaw @gjoliver @krfricke @xwjiang2010 @amogkam @matthewdeng @Yard1 @maxpumperla
+/doc/source/air/ @richardliaw @gjoliver @krfricke @xwjiang2010 @amogkam @matthewdeng @Yard1 @maxpumperla @ray-docs
 
 # ML Docker Dependencies
 /python/requirements/ml/requirements_dl.txt @amogkam @sven1977 @richardliaw @matthewdeng
