--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -174,6 +174,7 @@ parts:
               - file: serve/http-adapters
               - file: serve/handle-guide
               - file: serve/ml-models
+              - file: serve/model_composition
               - file: serve/deploying-serve
               - file: serve/monitoring
               - file: serve/performance
