--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -3346,10 +3346,10 @@ py_test(
     tags = ["team:rllib", "exclusive", "examples", ],
     size = "small",
     srcs = ["examples/connectors/run_connector_policy.py"],
-    data = [
+    data = glob([
         "tests/data/checkpoints/APPO_CartPole-v0_checkpoint-6.new",
-    ],
-    args = ["--checkpoint_file=tests/data/checkpoints/APPO_CartPole-v0_checkpoint-6.new"]
+    ]),
+    args = ["--checkpoint_file=../../rllib/tests/data/checkpoints/APPO_CartPole-v0_checkpoint-6.new"]
 )
 
 py_test(
@@ -3358,10 +3358,10 @@ py_test(
     tags = ["team:rllib", "exclusive", "examples", ],
     size = "small",
     srcs = ["examples/connectors/adapt_connector_policy.py"],
-    data = [
+    data = glob([
         "tests/data/checkpoints/APPO_CartPole-v0_checkpoint-6.old",
-    ],
-    args = ["--checkpoint_file=tests/data/checkpoints/APPO_CartPole-v0_checkpoint-6.old"]
+    ]),
+    args = ["--checkpoint_file=../../rllib/tests/data/checkpoints/APPO_CartPole-v0_checkpoint-6.old"]
 )
 
 py_test(
@@ -3370,11 +3370,11 @@ py_test(
     tags = ["team:rllib", "exclusive", "examples", ],
     size = "small",
     srcs = ["examples/connectors/self_play_with_policy_checkpoint.py"],
-    data = [
+    data = glob([
         "tests/data/checkpoints/PPO_open_spiel_checkpoint-6",
-    ],
+    ]),
     args = [
-        "--checkpoint_file=tests/data/checkpoints/PPO_open_spiel_checkpoint-6",
+        "--checkpoint_file=../../rllib/tests/data/checkpoints/PPO_open_spiel_checkpoint-6",
         "--train_iteration=1"  # Smoke test.
     ]
 )
