--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -60,6 +60,7 @@ parts:
               - file: data/advanced-pipelines
               - file: data/random-access
           - file: data/faq
+          - file: data/api/api
           - file: data/package-ref
           - file: data/integrations
 
