--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -179,16 +179,16 @@ parts:
               - file: serve/monitoring
               - file: serve/performance
               - file: serve/autoscaling
-              # - file: serve/deployment-graph
-              #   sections:
-              #     - file: serve/deployment-graph/model_composition
-              #     - file: serve/deployment-graph/chain_nodes_same_class_different_args
-              #     - file: serve/deployment-graph/combine_two_nodes_with_passing_input_parallel
-              #     - file: serve/deployment-graph/control_flow_based_on_user_inputs
               - file: serve/production
               - file: serve/migration
           - file: serve/architecture
           - file: serve/tutorials/index
+            sections:
+              - file: serve/tutorials/deployment-graph-patterns
+                sections:
+                  - file: serve/tutorials/deployment-graph-patterns/linear_pipeline
+                  - file: serve/tutorials/deployment-graph-patterns/combine_two_nodes_with_passing_input_parallel
+                  - file: serve/tutorials/deployment-graph-patterns/control_flow_based_on_user_inputs
           - file: serve/faq
           - file: serve/package-ref
 
