--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -183,12 +183,12 @@ parts:
               - file: serve/migration
           - file: serve/architecture
           - file: serve/tutorials/index
-            # sections:
-            #   - file: serve/tutorials/deployment-graph-patterns
-            #     sections:
-            #       - file: serve/tutorials/deployment-graph-patterns/linear_pipeline
-            #       - file: serve/tutorials/deployment-graph-patterns/branching_input
-            #       - file: serve/tutorials/deployment-graph-patterns/conditional
+            sections:
+              - file: serve/tutorials/deployment-graph-patterns
+                sections:
+                  - file: serve/tutorials/deployment-graph-patterns/linear_pipeline
+                  - file: serve/tutorials/deployment-graph-patterns/branching_input
+                  - file: serve/tutorials/deployment-graph-patterns/conditional
           - file: serve/faq
           - file: serve/package-ref
 
