--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1032,7 +1032,7 @@ py_test(
 
 # SimpleQ Reproducibility
 py_test(
-    name = "test_simple_q",
+    name = "test_repro_simple_q",
     tags = ["team:rllib", "algorithms_dir", "gpu"],
     size = "large",
     srcs = ["algorithms/simple_q/tests/test_repro_simple_q.py"]
