Refactor into new Scaling user guide, update code

--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -170,6 +170,7 @@ parts:
             sections:
               - file: serve/managing-deployments
               - file: serve/handling-dependencies
+              - file: serve/scaling-and-resource-allocation
               - file: serve/http-guide
               - file: serve/http-adapters
               - file: serve/handle-guide
