--- a/python/ray/data/BUILD
+++ b/python/ray/data/BUILD
@@ -82,6 +82,14 @@ py_test(
 )
 
 py_test(
+    name = "test_iceberg",
+    size = "large",
+    srcs = ["tests/test_iceberg.py"],
+    tags = ["team:data", "exclusive", "data_integration"],
+    deps = ["//:ray_lib", ":conftest"],
+)
+
+py_test(
     name = "test_actor_pool_map_operator",
     size = "small",
     srcs = ["tests/test_actor_pool_map_operator.py"],
